--- a/portfolio.html
+++ b/portfolio.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио</title>
+    <title>Студия</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body class="page">
     <!--Шапка сайта-->
-    <header>
-        <a href="./index.html">WebStudio</a>
+    <header class="page-header">
+        <a href="./index.html" class="logo">WebStudio</a>
 
         <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts list">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -32,80 +33,81 @@
         <section>
             <h1>Портфолио</h1>
 
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="portfolio-nav list">
+                <li><button type="button" class="portfolio-button">Все</button></li>
+                <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
+                <li><button type="button" class="portfolio-button">Приложения</button></li>
+                <li><button type="button" class="portfolio-button">Дизайн</button></li>
+                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
             </ul>
 
-            <ul>
+            <ul class="portfolio-list list">
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-1.jpg" alt="Веб-сайт" width="370" height="294">
-                    <h2>Технокряк</h2>
+                    <h2 class="portfolio-title">Технокряк</h2>
                     <p>Веб-сайт</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-2.jpg" alt="Дизайн" width="370" height="294">
-                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-3.jpg" alt="Приложение" width="370" height="294">
-                    <h2>Ресторан Seafood</h2>
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p>Приложение</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-4.jpg" alt="Маркетинг" width="370" height="294">
-                    <h2>Проект Prime</h2>
+                    <h2 class="portfolio-title">Проект Prime</h2>
                     <p>Маркетинг</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-5.jpg" alt="Приложение" width="370" height="294">
-                    <h2>Проект Boxes</h2>
+                    <h2 class="portfolio-title">Проект Boxes</h2>
                     <p>Приложение</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-6.jpg" alt="Веб-сайт" width="370" height="294">
-                    <h2>Inspiration has no Borders</h2>
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p>Веб-сайт</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-7.jpg" alt="Дизайн" width="370" height="294">
-                    <h2>Издание Limited Edition</h2>
+                    <h2 class="portfolio-title">Издание Limited Edition</h2>
                     <p>Дизайн</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-8.jpg" alt="Маркетинг" width="370" height="294">
-                    <h2>Проект LAB</h2>
+                    <h2 class="portfolio-title">Проект LAB</h2>
                     <p>Маркетинг</p></a>
                 </li>
                 <li>
                     <a href="">
                     <img src="./images/portfolio/img-9.jpg" alt="Приложение" width="370" height="294">
-                    <h2>Growing Business</h2>
+                    <h2 class="portfolio-title">Growing Business</h2>
                     <p>Приложение</p></a>
                 </li>
             </ul>
         </section>
     </main>
+
     <!--Футер-->
-    <footer>
+    <footer class="footer">
         <a href="./index.html">WebStudio</a>
 
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="contacts list">
+            <li><a href="mailto:info@example.com" class="link contacts">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="link contacts">+38 099 111 11 11</a></li>
         </ul>
 
     </footer>
