--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
     <!--Шапка сайта-->
     <header class="page-header">
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span><span class="logo-header">Studio</span></a>
 
         <nav>
             <ul class="site-nav list">
@@ -37,24 +42,24 @@
         
         <!--О нас-->
         <section class="section">
-            <h2 class="section-title">О нас</h2>
+            <h2 class="section-title visually-hidden">О нас</h2>
         
             <ul class="about-us-list list">
                 <li>
                     <h3 class="title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3 class="title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3 class="title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -84,22 +89,22 @@
                 <li>
                     <img src="/images/team/team1.jpg" alt="фото Игорь Демьяненко" width="270" height="260">
                     <h3 class="title">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="text">Product Designer</p>
                 </li>
                 <li>
                     <img src="/images/team/team2.jpg" alt="фото Ольга Репина" width="270" height="260">
                     <h3 class="title">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="/images/team/team3.jpg" alt="фото Николай Тарасов" width="270" height="260">
                     <h3 class="title">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="/images/team/team4.jpg" alt="фото Михаил Ермаков" width="270" height="260">
                     <h3 class="title">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -107,7 +112,8 @@
 
     <!--Футер-->
     <footer class="footer">
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span><span class="logo-footer">Studio</span></a>
 
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="contacts list">
