--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студия</title>
+    <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body class="page">
     <!--Шапка сайта-->
     <header class="page-header">
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span><span class="logo-header">Studio</span></a>
 
         <nav>
             <ul class="site-nav list">
-                <li><a href="" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
@@ -31,70 +36,70 @@
     <main>
         <!--Портфолио-->
         <section>
-            <h1>Портфолио</h1>
+            <h1 class="visually-hidden">Портфолио</h1>
 
             <ul class="portfolio-nav list">
-                <li><button type="button" class="portfolio-button">Все</button></li>
-                <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
-                <li><button type="button" class="portfolio-button">Приложения</button></li>
-                <li><button type="button" class="portfolio-button">Дизайн</button></li>
-                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+                <li><button type="button" class="button">Все</button></li>
+                <li><button type="button" class="button">Веб-сайты</button></li>
+                <li><button type="button" class="button">Приложения</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
 
             <ul class="portfolio-list list">
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-1.jpg" alt="Веб-сайт" width="370" height="294">
-                    <h2 class="portfolio-title">Технокряк</h2>
-                    <p>Веб-сайт</p></a>
+                    <h2 class="title">Технокряк</h2>
+                    <p class="text">Веб-сайт</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-2.jpg" alt="Дизайн" width="370" height="294">
-                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p></a>
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="text">Дизайн</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-3.jpg" alt="Приложение" width="370" height="294">
-                    <h2 class="portfolio-title">Ресторан Seafood</h2>
-                    <p>Приложение</p></a>
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="text">Приложение</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-4.jpg" alt="Маркетинг" width="370" height="294">
-                    <h2 class="portfolio-title">Проект Prime</h2>
-                    <p>Маркетинг</p></a>
+                    <h2 class="title">Проект Prime</h2>
+                    <p class="text">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-5.jpg" alt="Приложение" width="370" height="294">
-                    <h2 class="portfolio-title">Проект Boxes</h2>
-                    <p>Приложение</p></a>
+                    <h2 class="title">Проект Boxes</h2>
+                    <p class="text">Приложение</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-6.jpg" alt="Веб-сайт" width="370" height="294">
-                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p></a>
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="text">Веб-сайт</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-7.jpg" alt="Дизайн" width="370" height="294">
-                    <h2 class="portfolio-title">Издание Limited Edition</h2>
-                    <p>Дизайн</p></a>
+                    <h2 class="title">Издание Limited Edition</h2>
+                    <p class="text">Дизайн</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-8.jpg" alt="Маркетинг" width="370" height="294">
-                    <h2 class="portfolio-title">Проект LAB</h2>
-                    <p>Маркетинг</p></a>
+                    <h2 class="title">Проект LAB</h2>
+                    <p class="text">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="works">
                     <img src="./images/portfolio/img-9.jpg" alt="Приложение" width="370" height="294">
-                    <h2 class="portfolio-title">Growing Business</h2>
-                    <p>Приложение</p></a>
+                    <h2 class="title">Growing Business</h2>
+                    <p class="text">Приложение</p></a>
                 </li>
             </ul>
         </section>
@@ -102,7 +107,8 @@
 
     <!--Футер-->
     <footer class="footer">
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span><span class="logo-footer">Studio</span></a>
 
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="contacts list">
