--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         
             <ul class="work list">
                 <li>
-                    <img src="/images/img1.jpg" alt="веб програмирование" width="370" height="294">
+                    <img src="./images/img1.jpg" alt="веб програмирование" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/img2.jpg" alt="мобильний дизайн" width="370" height="294">
+                    <img src="./images/img2.jpg" alt="мобильний дизайн" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/img3.jpg" alt="веб графика" width="370" height="294">
+                    <img src="./images/img3.jpg" alt="веб графика" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -87,22 +87,22 @@
         
             <ul class="team-list list">
                 <li>
-                    <img src="/images/team/team1.jpg" alt="фото Игорь Демьяненко" width="270" height="260">
+                    <img src="./images/team/team1.jpg" alt="фото Игорь Демьяненко" width="270" height="260">
                     <h3 class="title">Игорь Демьяненко</h3>
                     <p class="text">Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/team/team2.jpg" alt="фото Ольга Репина" width="270" height="260">
+                    <img src="./images/team/team2.jpg" alt="фото Ольга Репина" width="270" height="260">
                     <h3 class="title">Ольга Репина</h3>
                     <p class="text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/team/team3.jpg" alt="фото Николай Тарасов" width="270" height="260">
+                    <img src="./images/team/team3.jpg" alt="фото Николай Тарасов" width="270" height="260">
                     <h3 class="title">Николай Тарасов</h3>
                     <p class="text">Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/team/team4.jpg" alt="фото Михаил Ермаков" width="270" height="260">
+                    <img src="./images/team/team4.jpg" alt="фото Михаил Ермаков" width="270" height="260">
                     <h3 class="title">Михаил Ермаков</h3>
                     <p class="text">UI Designer</p>
                 </li>
