--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
 <body class="page">
     <!--Шапка сайта-->
     <header class="page-header">
+        <div class="container">
         <a href="./index.html" class="logo">
             <span class="logo-web">Web</span><span class="logo-header">Studio</span></a>
 
@@ -31,9 +32,10 @@
             <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
 
-    <main>
+    <main class="container">
         <!--Портфолио-->
         <section>
             <h1 class="visually-hidden">Портфолио</h1>
@@ -107,6 +109,7 @@
 
     <!--Футер-->
     <footer class="footer">
+        <div class="container">
         <a href="./index.html" class="logo">
             <span class="logo-web">Web</span><span class="logo-footer">Studio</span></a>
 
@@ -115,6 +118,7 @@
             <li><a href="mailto:info@example.com" class="link contacts">info@example.com</a></li>
             <li><a href="tel:+380991111111" class="link contacts">+38 099 111 11 11</a></li>
         </ul>
+        </div>
 
     </footer>
 
